[package]
version = "0.2.0"
name = "mqtt-packet"
description = "MQTT Version 5.0 packet parser and generator."
documentation = "https://docs.rs/mqtt-packet"
homepage = "https://github.com/toddtreece/mqtt-packet"
repository = "https://github.com/toddtreece/mqtt-packet"
authors = ["Todd Treece <todd@uniontownlabs.org>"]
keywords = ["mqtt", "packet", "parser", "generator", "iot"]
readme = "README.md"
edition = "2018"
license = "MIT"